# soulpet

./: .gitignore  README.md  project.config.json  project.private.config.json  pyproject.toml  run-app.ps1  rxconfig.py
data/PsyDTCorpus/: dataset_infos.json
doc/: REFLEX_FASTAPI_GUIDE.md  REFLEX_GUIDE.md  UV_GUIDE.md
src/soulpet/: project.config.json  project.private.config.json
src/soulpet/miniprogram/: app.js  app.json
src/soulpet/miniprogram/components/agent-ui/: index.js  index.json  index.wxml  index.wxss  tools.js
src/soulpet/miniprogram/components/agent-ui/chatFile/: index.js  index.wxml  index.wxss
src/soulpet/miniprogram/components/agent-ui/collapse/: index.js  index.wxml
src/soulpet/miniprogram/components/agent-ui/customCard/: index.js  index.wxml  index.wxss
src/soulpet/miniprogram/components/agent-ui/tool/: index.js  index.wxml  index.wxss
src/soulpet/miniprogram/components/agent-ui/wd-markdown/: index.js  index.wxml  index.wxss
src/soulpet/miniprogram/components/agent-ui/wd-markdown/copy/: index.js  (+2 more)
src/soulpet/miniprogram/components/toolCard/business-list/: index.js  index.wxml  index.wxss
src/soulpet/miniprogram/components/toolCard/map/: index.js  index.wxml  index.wxss
src/soulpet/miniprogram/components/toolCard/weather/: index.js  index.wxml  index.wxss
src/soulpet/miniprogram/pages/chatBot/: chatBot.js  chatBot.wxml
src/soulpet/miniprogram/pages/index/: index.js  index.wxml
src/soulpet/miniprogram/pages/simpleChat/: README.md  simpleChat.js  simpleChat.wxml  simpleChat.wxss
src/soulpet/miniprogram/utils/: llm.js
(+3 files in other folders)
