[project]
name = "soulpet"
version = "0.1.0"
description = "SoulPet Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "huggingface-hub",
    "pandas",
    "reflex",       # Full-stack framework (replaces Gradio)
    "fastapi",      # Backend API framework
    "uvicorn",      # ASGI server
    "openai",  # For future LLM API usage
    "python-dotenv", # For managing environment variables
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soulpet"]

[tool.uv]
# Optional: Configure uv specific settings if needed
